@@ -1,3 +1,7 @@
+drkns 12.10.2020 08:40:27 +0100 - build 5678
+
+1. Correction of 5677.
+
 drkns 12.10.2020 00:12:45 +0100 - build 5677
 
 1. Refactoring.
